--- a/requirements.txt
+++ b/requirements.txt
@@ -1,130 +1,3 @@
-Couchapp==1.0.1
-Cython==0.20.1
-Django==1.6.4
-Flask==0.10.1
-Flask-PyMongo==0.3.0
-Flask-Restless==0.13.1
-Flask-SQLAlchemy==0.16
-Jinja2==2.7
-Markdown==2.4.1
-MarkupSafe==0.18
-MySQL-python==1.2.5
-PAM==0.4.2
-Pillow==2.4.0
-PyYAML==3.11
-Pygments==1.6
-SQLAlchemy==0.8.2
-South==0.8.4
-Twisted-Core==13.2.0
-Twisted-Web==13.2.0
-Werkzeug==0.9.2
-adium-theme-ubuntu==0.3.4
-apt-xapian-index==0.45
-argh==0.24.1
-argparse==1.2.1
-astroid==1.0.1
-backports.ssl-match-hostname==3.4.0.2
-bokeh==0.4.4-552-gbe0f9a3
-ccsm==0.9.11.1
-chardet==2.0.1
-colorama==0.3.1
-command-not-found==0.3
-compizconfig-python==0.9.11.1
-debtagshw==0.1
-decorator==3.4.0
-defer==1.0.6
-dirspec==13.10
-django-bootstrap-form==3.1
-django-debug-toolbar==1.2
-django-filter==0.7
-django-password-reset==0.7
-django-tables2==0.15.0
-djangorestframework==2.3.13
-docopt==0.4.0
-duplicity==0.6.23
-gevent==1.0.1
-gevent-websocket==0.9.3
-google-api-python-client==1.2
-greenlet==0.4.2
-gunicorn==17.5
-gyp==0.1
-h5py==2.2.1
-html5lib==0.999
-http-parser==0.8.3
-httplib2==0.9
-ipython==2.1.0
-itsdangerous==0.22
-jdcal==1.0
-jsonfield==0.9.20
-jsonpointer==1.3
-lockfile==0.8
-logilab-common==0.61.0
-lxml==3.3.3
-mandrill==1.0.56
-markdown2==2.2.1
-matplotlib==1.3.1
-mimerender==0.5.4
-mock==1.0.1
-mysql-connector-python==1.1.6
-networkx==1.8.1
-nose==1.3.3
-numexpr==2.4
-numpy==1.8.1
-oauthlib==0.6.1
-oneconf==0.3.7
-openpyxl==1.8.5
-pandas==0.14.0
-paramiko==1.10.1
-pathtools==0.1.2
-pexpect==3.1
-piston-mini-client==0.7.5
-ply==3.4
-psycopg2==2.4.5
-pyOpenSSL==0.13
-pyandoc==0.0.1
-pycrypto==2.6.1
-pycups==1.9.66
-pycurl==7.19.3
-pygobject==3.12.0
-pylibmc==1.2.3
-pylint==1.1.0
-pymongo==2.7.1
-pyparsing==2.0.2
-pyserial==2.6
-pysmbc==1.0.14.1
-pysqlite==2.6.3
-pystache==0.5.4
-python-apt==0.9.3.5
-python-dateutil==2.1
-python-debian==0.1.21-nmu2ubuntu2
-python-memcached==1.53
-python-mimeparse==0.1.4
-pytz==2014.2
-pyxdg==0.25
-pyzmq==14.3.1
-redis==2.10.1
-reportlab==3.1.8
-requests==2.3.0
-restkit==4.2.2
-scikit-learn==0.14.1
-scipy==0.13.3
-sessioninstaller==0.0.0
-six==1.7.3
-slimit==0.8.1
-socketpool==0.5.3
-software-center-aptd-plugins==0.0.0
-sqlparse==0.1.11
-system-service==0.1.6
-tables==3.1.1
-termcolor==1.1.0
-tornado==3.2.2
-unity-lens-photos==1.0
-urllib3==1.7.1
-vincent==0.4.4
-virtualenv==1.11.6
-watchdog==0.8.0
-websocket==0.2.1
-wsgiref==0.1.2
-xdiagnose==3.6.3build2
-xlrd==0.9.3
-zope.interface==4.0.5
+Flask
+pygments
+requests
